feat(sell): Phase 4 - Implement Sell Electronics Module, Multi-Image Uploader, My Listings Management, and Ownership Validation